<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/edtFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/serv_pers_full_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spnGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawSelectorOnTop="true"
            android:entries="@array/gender_array" />

        <EditText
            android:id="@+id/edtDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/dob"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/address"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/city"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtZipCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:digits="0123456789"
        android:hint="@string/pincode"
        android:inputType="number"
        android:maxLength="6"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/state"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtLangKnown"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/language_known"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edtEduQualifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:hint="@string/edu_qulifiy"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_round_color"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>