<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_g_translate_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <item
                android:id="@+id/local_english"
                android:title="@string/text_english" />
            <item
                android:id="@+id/local_tamil"
                android:title="@string/text_tamil" />
        </menu>
    </item>
</menu>
