<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_company" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/reg_org_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <EditText
                android:id="@+id/edtRegCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/reg_org_company_name"
                android:inputType="text"
                android:maxLength="50"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtNoOfWorkPeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/reg_org_no_of_people"
                android:inputType="number"
                android:maxLength="3"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtRegCompanyAddress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/reg_org_address_1"
                android:inputType="text"
                android:maxLength="50"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtRegCompanyAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/reg_org_address_2"
                android:inputType="text"
                android:maxLength="50"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtRegCompanyCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/reg_org_city"
                android:inputType="text"
                android:maxLength="50"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtRegCompanyPinCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:digits="0123456789"
                android:hint="@string/reg_org_postal"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtRegCompanyState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/reg_org_state"
                android:inputType="text"
                android:maxLength="50"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/reg_org_building_title"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/rdgBuildingType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbOwn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/reg_org_building_own"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rdbTenancy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_org_building_rental"
                    android:textColor="@color/black" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_round_color"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/reg_submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>